added chapter separator

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 <body>
     <%= t.include("partials/_nav.html", grunt.data.json) %>
 
-    <section id="topper" data-anchor-target="#second" data-200-bottom-top="opacity:1;display:block;" data-bottom-top="opacity:0;display:none;">
+    <section id="topper" data-anchor-target="#second" data-400-bottom-top="opacity:1;display:block;" data-bottom-top="opacity:0;display:none;">
         <div class="sticky">
             <div class="bg-video"><iframe src="https://player.vimeo.com/video/331378653?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
         </div>
@@ -29,9 +29,9 @@
     </section>
 
     <section id="second">
-        <article>
-            <h2>Welcome to Minh Khai</h2>
-            <p data-100-bottom-top="opacity:0;transform:scale(1.1);" data-center-center="opacity:1;transform:scale(1);">You smell Minh Khai before you can see it. Just thirty kilometers south of Hanoi, Vietnam, the
+        <article data-50-bottom-top="opacity:0" data-100-center-center="opacity:1">
+          <div data-50-bottom-top="transform:scale(1.3);" data-center-center="transform:scale(1);" class="linebreak"><h2><span>Welcome to Minh Khai</span></h2></div>
+            <p>You smell Minh Khai before you can see it. Just thirty kilometers south of Hanoi, Vietnam, the
                 landscape shifts from urban bustle to an agrarian-industrial hybrid. Rice paddies give way to factories
                 towering over the narrow streets, and the scent of burning plastic and exhaust seeps through even closed
                 car windows. A faded red banner declares that you have arrived in “Ward Minh Khai.” What it doesn’t tell
@@ -64,7 +64,7 @@
     </section>
     <section id="third">
         <article>
-            <h2>From Golden State to Vietnam</h2>
+          <div class="linebreak"><h2><span>From Golden State to Vietnam</span></h2></div>
             <p>Most of us don’t think much about recycling. We rinse our yogurt containers, crush our milk cartons,
                 and break down our boxes. We pause in front of public waste bins, puzzling over how to classify our
                 single-use forks or coffee cups. But once our trash hits the curb in a blue or a brown or a green bin, the
@@ -106,7 +106,7 @@
     </section>
     <section id="fourth">
         <article>
-            <h2>A Shifting Landscape</h2>
+          <div class="linebreak"><h2><span>A Shifting Landscape</span></h2></div>
             <p>When it comes to change in Minh Khai, Tuan Dinh has had a front row seat. “This career has been a
                 tradition in my village,” he says. “I am the next generation.”</p>
             <p>The forty-year-0ld has been in the recycling business for half his life. Like many young men, he used to
@@ -145,7 +145,7 @@
     </section>
     <section id="fifth">
         <article>
-            <h2>An Evolving Ecology</h2>
+          <div class="linebreak"><h2><span>An Evolving Ecology</span></h2></div>
             <p>In the 1950s, Minh Khai was an agricultural community. Locals called it làng khoai – the potato village
                 – for the root vegetable, khoai, that served as the region’s economic foundation. Once the Vietnam War
                 began, however, the able-bodied young men of Minh Khai were called to fight. The potato village was left
@@ -236,7 +236,7 @@
     </section>
     <section id="seventh">
         <article>
-            <h2>A Deadly Legacy</h2>
+          <div class="linebreak"><h2><span>A Deadly Legacyd</span></h2></div>
             <p>Not everyone in Minh Khai works with recyclables. But all are, in one way or another, impacted by the
                 trade that has become ubiquitous.</p>
             <p>Nam Nguyen spends her afternoons weeding, watering, or harvesting a small garden plot near Minh Kai’s
@@ -298,7 +298,7 @@
     </section>
     <section id="eighth">
         <article>
-            <h2>The Cost of Doing Business</h2>
+          <div class="linebreak"><h2><span>The Cost of Doing Business</span></h2></div>
             <p>Tuan’s favorite meal is a simple one: Rice, soup, meat and fish. He prefers Minh Khai’s traditional fare
                 to the more elaborate, and expensive, specialties available in Hanoi. But it’s still hours before lunch time,
                 so Tuan contents himself with a cigarette break between deliveries.</p>
@@ -345,7 +345,7 @@
     </section>
     <section id="nineth">
         <article>
-            <h2>Global Complications, Local Consequences</h2>
+          <div class="linebreak"><h2><span>Global Complications, Local Consequences</span></h2></div>
             <p>This was a problem Vietnam faced on a global scale in 2018, according to Tuan Nguyen, who reports
                 on economics and trade for Tien Phong, one of Vietnam’s largest newspapers. Inundated with plastics in
                 the wake of China’s “National Sword” policy, government officials were at a loss.</p>
@@ -398,7 +398,7 @@
     </section>
     <section id="tenth">
         <article>
-            <h2>Moving Forward</h2>
+          <div class="linebreak"><h2><span>Moving Forward</span></h2></div>
             <p>Minh Khai’s future remains as murky as the water in its last and only lake. There were once dozens of
                 ponds and estuaries near the village, but most were filled in to satisfy a growing demand for factory real
                 estate. This opaque green pool is all that remains of the area’s once lush wetlands.</p>
