prep svg for d3

--- a/src/index.html
+++ b/src/index.html
@@ -74,9 +74,11 @@
                 form. If it isn’t buried in a landfill or floating in the ocean, your discarded plastic is likely circulating the
                 globe through a system of trade that transforms it from product, to waste, to commodity, and back to
                 product again.</p>
+
             <div class="large-img">
-                <img style="padding-left:300px; padding-right:300px; padding-top:50px; padding-bottom:50px" src="./assets/graphics.svg">
+                <img style="padding-left: 20vh; padding-right: 20vh; padding-top:20vh; padding-bottom:20vh" src="./assets/graphics.svg">
             </div>
+
             <p>There’s a hierarchy to the recycling world, too. Not all plastic is created equal. Items are labeled according
                 to chemical makeup, with numbers representing different recipes of plastic which involve ingredients with
                 names like polyvinyl chloride and acrylonitrile butadiene. Some ingredients are easier to recycle, and to
