--- a/src/index.html
+++ b/src/index.html
@@ -75,8 +75,8 @@
                 globe through a system of trade that transforms it from product, to waste, to commodity, and back to
                 product again.</p>
 
-            <div class="large-img">
-                <img style="padding-left: 20vh; padding-right: 20vh; padding-top:20vh; padding-bottom:20vh" src="./assets/graphics.svg">
+            <div id="band-graphic" style="height:90vh;">
+                <!-- <img style="padding-left: 20vh; padding-right: 20vh; padding-top:20vh; padding-bottom:20vh" src="./assets/graphics.svg"> -->
             </div>
 
             <p>There’s a hierarchy to the recycling world, too. Not all plastic is created equal. Items are labeled according
