--- a/src/index.html
+++ b/src/index.html
@@ -290,11 +290,8 @@
                 <iframe src="https://player.vimeo.com/video/331630170?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
 
 
-
     <section id="nineth">
-        <article data-100-bottom-top="opacity:0" data-1500-center-center="opacity:1">
-          <div data-100-bottom-top="transform:scale(1.3);" data-center-center="transform:scale(1);" class="linebreak">
-            <h2><span>A Deadly Legacy</span></h2></div>
+        <article data-100-bottom-top="opacity:0; transform:scale(1.1);" data-800-center-center="opacity:1;transform:scale(1);">
             <p>Not everyone in Minh Khai works with recyclables, but all are impacted by the industry that provides its residents’ income.
               Away from the busy gate where Tuan and his drivers spend each day, a quiet side street leads toward the village’s central lake.
               (The area once had many lakes, but most were filled in to create more space for development.) Between this street and the lake,
@@ -349,9 +346,7 @@
 
 
     <section id="tenth">
-        <article data-100-bottom-top="opacity:0" data-800-center-center="opacity:1">
-          <div data-100-bottom-top="transform:scale(1.3);" data-center-center="transform:scale(1);" class="linebreak">
-            <h2><span>The Cost of Doing Business</span></h2></div>
+        <article data-100-bottom-top="opacity:0; transform:scale(1.3);" data-800-center-center="opacity:1; transform:scale(1);">
             <p>Tuan Dinh’s favorite meal is a simple one: Rice, soup, meat and fish. The cargo hauler prefers Minh Khai’s traditional fare to more
               elaborate, and expensive, specialties available in Hanoi. He talks about food in the same way he talks about his chosen career –
               with blunt pragmatism.</p>
@@ -392,10 +387,10 @@
 
 
 
-    <section id="nineth">
+    <section id="eleventh">
         <article data-100-bottom-top="opacity:0" data-800-center-center="opacity:1">
           <div data-100-bottom-top="transform:scale(1.3);" data-center-center="transform:scale(1);" class="linebreak">
-            <h2><span>Global Complications, Local Consequences</span></h2></div>
+            <h2><span>An Uncertain Future</span></h2></div>
             <p>The conflict between Vietnam’s commercial and environmental priorities came to a head last fall, according to Tuan Nguyen,
               who reports on economics and trade for Tien Phong, one of Vietnam’s largest newspapers. Inundated with plastics in the wake of
               China’s “National Sword” policy, government officials were at a loss.</p>
@@ -430,10 +425,13 @@
               to David Biderman, is to continue exporting waste – ideally, with better quality standards – to countries that will take it.</p>
             <p>What remains less clear is what will happen in places like Minh Khai, which have embraced and evolved around a commodity that,
               for decades, no one else wanted.</p>
+        </article>
+      </section>
 
 
 
-
+    <section id="twelfth">
+<article>
             <p>Minh Khai’s future is as murky as the water in its last and only lake. There were once dozens of ponds and estuaries near the village,
               but most were filled in to satisfy a growing demand for factory real estate. This opaque green pool is all that remains of the area’s
               once lush wetlands.</p>
@@ -459,18 +457,12 @@
               make in Minh Khai, but the work comes with fewer risks.</p>
             <p>“They don’t have to collect trash,” he says. “That’s enough.”</p>
 
-
-
-
         </article>
     </section>
 
 
 
-
-
-
-    <section id="tenth">
+    <section id="thirteenth">
         <article data-100-bottom-top="opacity:0" data-800-center-center="opacity:1">
           <div data-100-bottom-top="transform:scale(1.3);" data-center-center="transform:scale(1);" class="linebreak">
             <h2><span>Moving Forward</span></h2></div>
