--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,9 @@
             <h1 style="width:800px ! important; padding-bottom: 10px ! important;"><img src="./assets/title.png"></h1>
             <div class="deck">Plastic recyclers in Minh Khai, Vietnam wrestle with the blessings and curses of an empire
                 built on our trash.</div>
+
+                <div class="deck"></br>By Francesca Fenzi and Yutao Chen</div>
+
             <div id="play-video" class="film">PLAY</div>
             <small class="scroll">SCROLL TO READ</small>
         </div>
@@ -100,7 +103,7 @@
         </article>
     </section>
 
-
+<h3>California's exports of plastic waste and scrap</h3>
                 <div id="band-graphic" style="height:100vh;">
                     <!-- <img style="padding-left: 20vh; padding-right: 20vh; padding-top:20vh; padding-bottom:20vh" src="./assets/graphics.svg"> -->
                 </div>
@@ -431,7 +434,7 @@
 
 
     <section id="twelfth">
-<article>
+      <article data-10-bottom-top="opacity:0; transform:scale(1.1);" data-300-bottom-center="opacity:1; transform:scale(1);">
             <p>Minh Khai’s future is as murky as the water in its last and only lake. There were once dozens of ponds and estuaries near the village,
               but most were filled in to satisfy a growing demand for factory real estate. This opaque green pool is all that remains of the area’s
               once lush wetlands.</p>
@@ -462,10 +465,13 @@
 
 
 
+                <div class="embed-container" data-50-bottom-top="opacity:0; transform:scale(0.9);" data-100-center-center="opacity:1; transform:scale(1);">
+                <iframe src="https://player.vimeo.com/video/331629627?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
+
+
+
     <section id="thirteenth">
-        <article data-100-bottom-top="opacity:0" data-800-center-center="opacity:1">
-          <div data-100-bottom-top="transform:scale(1.3);" data-center-center="transform:scale(1);" class="linebreak">
-            <h2><span>Moving Forward</span></h2></div>
+        <article data-10-bottom-top="opacity:0; transform:scale(1.1);" data-300-bottom-center="opacity:1; transform:scale(1);">
             <p>The effects of global policy change can already be felt in Minh Khai. On the street where Cam Le and her family continue
               to run their plastics business, some have been forced to close their shops. One man and his wife, after only four months in
               the recycling trade, are selling their equipment at a loss and moving to another province. They hope to start over, with a new
@@ -473,10 +479,6 @@
             <p>For now, established business owners like Cam seem to have enough domestic plastic sources to sustain them. But Minh Khai’s boomtown
               days may be reaching an end – leaving residents to deal with the consequences. Short of relocation, there are few alternatives for
               business owners who can’t make it in the recycling trade.</p>
-
-            <div class="embed-container" data-50-bottom-top="opacity:0; transform:scale(0.9);" data-100-center-center="opacity:1; transform:scale(1);">
-            <iframe src="https://player.vimeo.com/video/331629627?background=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
-
             <p>Michael DiGregorio compares the dearth of international plastics today to the Asian Financial crisis of the 1990s. At that time,
               threatened by a shrinking supply chain, recyclers in Minh Khai retreated back into their agricultural specialty of farming khoai.
               But it’s unlikely that business owners in Minh Khai could do the same today, he says. Between the landscape alterations and chemical
