--- a/src/index.html
+++ b/src/index.html
@@ -97,10 +97,13 @@
     </section>
 
 
-    <h3>California's exports of plastic waste and scrap</h3>
+    <h3>California's Recyclable Plastic Exports by Region</h3>
     <div id="band-graphic" style="height:45vw;">
         <!-- <img style="padding-left: 20vh; padding-right: 20vh; padding-top:20vh; padding-bottom:20vh" src="./assets/graphics.svg"> -->
     </div>
+    <div class="graphic-caption">
+    <small>Source:CalRecycle</small>
+  </div>
 
 
     <div class="spacer"></div>
@@ -211,7 +214,7 @@
 
     <section id="seventh">
         <article>
-            <div data-100-bottom-top="transform:scale(1.1);opacity:0;" data-50-bottom-center="transform:scale(1);opacity:1;" class="linebreak">
+          <div data-100-bottom-top="transform:scale(1.3);opacity:0;" data-center-center="transform:scale(1);opacity:1;" class="linebreak">
                 <h2><span>A Costly Business</span></h2>
             </div>
             <p>Across town, Cam Le is unloading a fresh delivery of her own. She’s a boisterous woman, with a gravelly voice and a laugh that
@@ -380,7 +383,7 @@
 
     <section id="eleventh">
         <article>
-            <div data-100-bottom-top="transform:scale(1.3);opacity:0;" data-center-center="transform:scale(1);opacity:1;" class="linebreak">
+          <div data-100-bottom-top="transform:scale(1.3);opacity:0;" data-center-center="transform:scale(1);opacity:1;" class="linebreak">
                 <h2><span>An Uncertain Future</span></h2>
             </div>
             <p>The conflict between Vietnam’s commercial and environmental priorities came to a head last fall, according to Tuan Nguyen,
@@ -483,6 +486,17 @@
             <p>Each delicate point has been wrapped in plastic.</p>
         </article>
     </section>
+
+
+<div class="credits">
+    <small>Written by Francesca Fenzi</br>
+Video by Yutao Chen</br>
+Photographs by Yutao Chen</br>
+Web Design by Yutao Chen</br>
+Additional reporting by Susie Neilson</br>
+Translation by Diep Pham, Diep Nguyen and Alexandre Bui</br>
+</small>
+</div>
 
     <script src="app.js" async></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
